--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.143.1",
-    "constructs": "^10.0.0"
+    "aws-sdk": "^2.1656.0",
+    "aws-sdk-mock": "^6.0.4",
+    "constructs": "^10.0.0",
+    "dotenv": "^16.4.5"
   }
 }
