--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@aws-cdk/assertions": "^1.204.0",
     "aws-cdk": "2.143.1",
     "jest": "^29.7.0"
   },
