--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudwatch": "^3.616.0",
+    "@aws-sdk/client-dynamodb": "^3.621.0",
     "@aws-sdk/client-s3": "^3.617.0",
     "@smithy/util-stream": "^3.1.1",
     "aws-cdk-lib": "2.143.1",
