--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "@aws-sdk/client-s3": "^3.617.0",
     "@aws-sdk/client-sns": "^3.624.0",
     "@aws-sdk/client-ssm": "^3.624.0",
-    "@aws-sdk/client-sns": "^3.624.0",
-    "@aws-sdk/client-ssm": "^3.624.0",
     "@smithy/util-stream": "^3.1.1",
     "aws-cdk-lib": "2.143.1",
     "aws-sdk": "^2.1656.0",
     "aws-sdk-client-mock": "^4.0.1",
+    "cdk-assets": "^2.151.7",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.5"
   }
